# adventofcode

./: .gitignore  Cargo.toml  commit  fix  results.txt  run  rust-toolchain.toml  rustfmt.toml
.github/workflows/: rust.yml
ab/src/year2021/: test_2021.py
src/: common.rs  lib.rs  main.rs  prelude.rs
src/snapshots/: advent__tests__year2015day01_answer.snap  advent__tests__year2015day02_answer.snap  advent__tests__year2015day03_answer.snap  advent__tests__year2016day01_answer.snap  advent__tests__year2017day01_answer.snap  advent__tests__year2019day01_answer.snap  advent__tests__year2020day01_answer.snap  advent__tests__year2021day01_answer.snap  advent__tests__year2021day02_answer.snap  advent__tests__year2021day03_answer.snap
src/solutions/: mod.rs
src/solutions/year2015/: day01.md  day01.rs  day01.txt  day02.md  day02.rs  day02.txt  day03.md  day03.rs  day03.txt  day04.rs  day05.rs  day06.rs  day07.rs  mod.rs
src/solutions/year2016/: day01.md  day01.rs  day01.txt  day02.md  day02.rs  day03-input.txt  day03.md  day03.rs  day04.md  day04.rs  day05.md  day05.rs  day21.md  day21.rs  mod.rs
src/solutions/year2017/: day01.md  day01.rs  day01.txt
src/solutions/year2018/: day01.md  day01.rs  day01.txt  day02.md  day02.rs  day02.txt  day03.md  day03.rs  day03.txt  day04.md  day04.rs  day04.txt  day05.md  day05.rs  day05.txt  day06.md  day06.rs  day06.txt  mod.rs
src/solutions/year2019/: day01.md  day01.rs  day01.txt  mod.rs
src/solutions/year2020/: day01.md  day01.rs  day01.txt  mod.rs
src/solutions/year2021/: day01.md  day01.rs  day01.txt  day02.md  day02.rs  day02.txt  day03.md  day03.rs  day03.txt  day04.md  day04.rs  day05.md  day05.rs  day06.md  mod.rs
src/solutions/year2022/: day01.md  day01.rs  day02.md  day02.rs  mod.rs
