[package]
name = "advent"
version = "0.0.0"
authors = ["Jeremy Banks <_@jeremy.ca>"]
edition = "2021"

[dependencies]
bincode = "1.3.3"
blake3 = "1.2.0"
boolinator = "2.4.0"
bounded-integer = { version = "0.5.0", features = ["types", "serde"] }
bytes = "1.1.0"
color-eyre = "0.5.11"
crossbeam = "0.8.1"
derive_more = "0.99.17"
dotenv = "0.15.0"
erased-serde = "0.3.16"
eyre = "0.6.5"
getset = "0.1.2"
inherent = "1.0.0"
insta = "1.8.0"
itertools = "0.10.1"
log = "0.4.14"
once_cell = "1.8.0"
openssl = { version = "0.10.38", features = ["vendored"] }
parking_lot = { version = "0.11.2", features = ["deadlock_detection", "serde"] }
paste = "1.0.6"
proptest = "1.0.0"
prost = "0.9.0"
qcell = "0.4.3"
rand = "0.8.4"
rayon = "1.5.1"
regex = "1.5.4"
remain = "0.2.2"
reqwest = { version = "0.11.7", features = ["json", "blocking"] }
rusqlite = { version = "0.26.1", features = ["bundled-full", "session", "buildtime_bindgen"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
serde_repr = "0.1.7"
serde_rusqlite = "0.29.0"
serde_urlencoded = "0.7.0"
serde-transcode = "1.1.1"
sled = { version = "0.34.7", features = ["compression"] }
static-rc = "0.5.0"
thiserror = "1.0.30"
thousands = "0.2.0"
time = "0.3.5"
tokio = { version = "1.14.0", features = ["full"] }
tracing = { version = "0.1.29", features = ["log"] }
tracing-error = { version = "0.2.0", features = ["traced-error"] }
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-serde = "0.1.2"
tracing-subscriber = "0.3.3"
tracing-unwrap = "0.9.2"
typed-arena = "2.0.1"
typetag = "0.1.8"
url = { version = "2.2.2", features = ["serde"] }

[profile.dev.package.backtrace]
opt-level = 3
