[package]
name = "advent"
version = "0.0.0"
authors = ["Jeremy Banks <_@jeremy.ca>"]
edition = "2021"

[dependencies]
boolinator = "2.4.0"
bytes = "1.1.0"
color-eyre = "0.5.11"
crossbeam = "0.8.1"
clap = { version = "3.0.0-rc.4", features = ["derive", "cargo", "env", "regex", "unicode", "wrap_help"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
eyre = "0.6.5"
getset = "0.1.2"
inherent = "1.0.0"
itertools = "0.10.3"
image = "0.23.14"
log = "0.4.14"
once_cell = "1.8.0"
parking_lot = { version = "0.11.2" }
paste = "1.0.6"
prost = "0.9.0"
qcell = "0.4.3"
rand = "0.8.4"
rayon = "1.5.1"
regex = "1.5.4"
reqwest = { version = "0.11.7" }
static-rc = "0.5.0"
thousands = "0.2.0"
time = "0.3.5"
tokio = { version = "1.14.0", features = ["full"] }
tracing = { version = "0.1.29", features = ["log"] }
tracing-error = { version = "0.1.2", features = ["traced-error"] }
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = "0.2.5"
tracing-unwrap = "0.9.2"
typed-arena = "2.0.1"
typetag = "0.1.8"
lazy_static = "1.4.0"
re = "0.1.0"
lazy-regex = "2.2.2"
ghost-cell = "0.2.2"
threadstack = "0.4.1"
slotmap = "1.0.6"

[profile.dev.package.backtrace]
opt-level = 3

[profile.dev.package.image]
opt-level = 3
