[package]
name = "advent"
version = "0.0.0"
authors = ["Jeremy Banks <_@jeremy.ca>"]
edition = "2021"

[dependencies]
boolinator = "2.4.0"
bytes = "1.1.0"
color-eyre = "0.6.2"
crossbeam = "0.8.1"
clap = { version = "4.0.29", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
eyre = "0.6.5"
getset = "0.1.2"
inherent = "1.0.0"
itertools = "0.10.3"
image = "0.24.5"
once_cell = "1.16.0"
parking_lot = { version = "0.12.1" }
paste = "1.0.6"
prost = "0.11.3"
qcell = "0.5.2"
rand = "0.8.4"
rayon = "1.5.1"
regex = "1.5.4"
reqwest = { version = "0.11.8" }
static-rc = "0.6.1"
thousands = "0.2.0"
time = "0.3.5"
tokio = { version = "1.15.0", features = ["full"] }
tracing = { version = "0.1.29" }
tracing-error = { version = "0.2.0", features = ["traced-error"] }
tracing-futures = "0.2.5"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-unwrap = "0.10.0"
typed-arena = "2.0.1"
typetag = "0.2.3"
lazy_static = "1.4.0"
re = "0.1.0"
lazy-regex = "2.2.2"
ghost-cell = "0.2.2"
threadstack = "0.4.1"
slotmap = "1.0.6"

[profile.dev.package.backtrace]
opt-level = 3

[profile.dev.package.image]
opt-level = 3
